[package]
name = "playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
talk = { git = "https://github.com/Distributed-EPFL/talk", features=[ "test_utilities" ], branch="benchmark" }
tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-util", "sync", "time" ] }

[dev-dependencies]